Create and style edit fields for creating new cards

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,14 +16,20 @@
     <!-- Label for set editor name field [CHAR LIMIT=20] -->
     <string name="set_name">Name</string>
 
-    <!-- Hint text for for set editor description field [CHAR LIMIT=20] -->
-    <string name="set_name_help">Choose a name</string>
+
 
     <!-- Label for set editor description field [CHAR LIMIT=20] -->
     <string name="set_desc">About</string>
 
-    <!-- Hint text for for set editor description field [CHAR LIMIT=20] -->
-    <string name="set_desc_help">Describe your set</string>
+    <!-- Label for set editor name field [CHAR LIMIT=20] -->
+    <string name="card_term">Term</string>
+
+
+
+    <!-- Label for set editor description field [CHAR LIMIT=20] -->
+    <string name="card_definition">Definition</string>
+
+
 
 
 </resources>
