add back buttons for edit scenes, create new list view for cards

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,6 +34,7 @@
     <string name="add_card">Add Card</string>
     <!-- Activity label for editing a card [CHAR LIMIT=20] -->
     <string name="edit_card">Edit Card</string>
+    <string name="title_activity_card_list">CardListActivity</string>
 
 
 </resources>
