remove some extra up navigations and add flip menu option to terms

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -34,7 +34,11 @@
     <string name="add_card">Add Card</string>
     <!-- Activity label for editing a card [CHAR LIMIT=20] -->
     <string name="edit_card">Edit Card</string>
+
     <string name="title_activity_card_list">CardListActivity</string>
+
+    <string name="flip_card">Flip</string>
+
 
 
 </resources>
